--- a/index.html
+++ b/index.html
@@ -1419,7 +1419,7 @@
         
     </div>
 
-    <button class="enviar-pedido" onclick="enviarPedido()">Enviar pedido por WhatsApp</button>
+    <button class="enviar-pedido" onclick="enviarPedido()">Realizar pedido por WhatsApp</button>
 
 <script>
         let carrito = [];
@@ -1472,7 +1472,7 @@
                 mensaje += `- ${item.nombre}: S/ ${item.precio.toFixed(2)}\n`;
             });
             mensaje += `Total: S/ ${total.toFixed(2)}`;
-            const url = `https://wa.me/51921108539?text=${encodeURIComponent(mensaje)}`;
+            const url = `https://wa.me/51938368075?text=${encodeURIComponent(mensaje)}`;
             window.open(url, '_blank');
         }
 
