--- a/index.html
+++ b/index.html
@@ -1287,10 +1287,10 @@
     <button onclick="agregarAlCarrito('Cautín de 30W', 25.00)">Agregar al carrito</button>
 </div>
 <div class="producto">
-    <img src="https://via.placeholder.com/150" alt="Protoboard 830 puntos">
+<img src="Placa de prototipos.jpg" alt="Protoboard 830 puntos">
     <h3>Protoboard 830 puntos</h3>
-    <p>S/ 10.00</p>
-    <button onclick="agregarAlCarrito('Protoboard 830 puntos', 10.00)">Agregar al carrito</button>
+    <p>S/ 12.00</p>
+    <button onclick="agregarAlCarrito('Protoboard 830 puntos', 12.00)">Agregar al carrito</button>
 </div>
 <div class="producto">
     <img src="https://via.placeholder.com/150" alt="Cables jumper macho-macho">
