--- a/index.html
+++ b/index.html
@@ -1287,7 +1287,7 @@
     <button onclick="agregarAlCarrito('Cautín de 30W', 25.00)">Agregar al carrito</button>
 </div>
 <div class="producto">
-<img src="Placa de prototipos.jpg" alt="Protoboard 830 puntos">
+<img src="Protoboard.jpg" alt="Protoboard 830 puntos">
     <h3>Protoboard 830 puntos</h3>
     <p>S/ 12.00</p>
     <button onclick="agregarAlCarrito('Protoboard 830 puntos', 12.00)">Agregar al carrito</button>
