--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electrónica Piura</title>
+    <title>Ohm(Ω)</title>
     <style>
         h5 {
             font-family: 'Trebuchet MS', sans-serif; /* Fuente urbana */
@@ -248,9 +248,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Tienda de electronica</h1>
-        <h4>"Tienda electronica virtual, 100% editable y adactable para tu negocio"</h4>
-        <h5 style="font-family: 'Trebuchet MS', sans-serif;">(Esta tienda podría ser tuya, comprala o alquila los 3 meses de prueba)</h5>
+        <h1>Ohm(Ω)</h1>
    
         <div class="barra-busqueda">
             <input type="text" id="busqueda" placeholder="Buscar componentes...">
@@ -463,8 +461,8 @@
                 <div class="producto">
                     <img src="LM35.jpg" alt="Sensor de temperatura LM35">
                     <h3>Sensor de temperatura LM35</h3>
-                    <p>S/ 5.00</p>
-                    <button onclick="agregarAlCarrito('Sensor de temperatura LM35', 5.00)">Agregar al carrito</button>
+                    <p>S/ 7.00</p>
+                    <button onclick="agregarAlCarrito('Sensor de temperatura LM35', 7.00)">Agregar al carrito</button>
                 </div>
                 <div class="producto">
                 <img src="DHT11.jpg" alt="Sensor de humedad DHT11">
