--- a/index.html
+++ b/index.html
@@ -1416,7 +1416,7 @@
 
         
     </div>
-
+<h5>Delivery gratis a partir de 10S/</h5>
     <button class="enviar-pedido" onclick="enviarPedido()">Realizar pedido por WhatsApp</button>
 
 <script>
