--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
 <body>
     <div class="container">
         <h1>Ohm(Ω)</h1>
-   
+           <h5>"Tienda electronica"</h5>
+
         <div class="barra-busqueda">
             <input type="text" id="busqueda" placeholder="Buscar componentes...">
             <button onclick="filtrarProductos()">Buscar</button>
