--- a/index.html
+++ b/index.html
@@ -1269,10 +1269,10 @@
     <button onclick="agregarAlCarrito('Diodo 1N4007', 0.20)">Agregar al carrito</button>
 </div>
 <div class="producto">
-    <img src="https://via.placeholder.com/150" alt="LED rojo 5mm">
-    <h3>LED rojo 5mm</h3>
+    <img src="Leds.jpg" alt="LEDS">
+    <h3>LEDS rojo-verde-azul-blanco-amarillo 5mm</h3>
     <p>S/ 0.30</p>
-    <button onclick="agregarAlCarrito('LED rojo 5mm', 0.30)">Agregar al carrito</button>
+    <button onclick="agregarAlCarrito('LEDS ', 0.30)">Agregar al carrito</button>
 </div>
 <div class="producto">
     <img src="https://via.placeholder.com/150" alt="Potenciómetro 10K Ohm">
