--- a/index.html
+++ b/index.html
@@ -1263,11 +1263,53 @@
     <button onclick="agregarAlCarrito('Transistor NPN 2N2222', 0.50)">Agregar al carrito</button>
 </div>
 <div class="producto">
-    <img src="1n4007.jpg" alt="Diodo 1N4007">
+    <img src="Diodo.jpg" alt="Diodo 1N4007">
     <h3>Diodo 1N4007</h3>
-    <p>S/ 0.20</p>
-    <button onclick="agregarAlCarrito('Diodo 1N4007', 0.20)">Agregar al carrito</button>
+    <p>S/ 0.50</p>
+    <button onclick="agregarAlCarrito('Diodo 1N4007', 0.50)">Agregar al carrito</button>
 </div>
+
+<div class="producto">
+    <img src="Diodo.jpg" alt="Diodo FR107">
+    <h3>Diodo FR107</h3>
+    <p>S/ 0.50</p>
+    <button onclick="agregarAlCarrito('Diodo FR107', 0.50)">Agregar al carrito</button>
+</div>
+<div class="producto">
+    <img src="Diodo.jpg" alt="Diodo 1N5399">
+    <h3>Diodo 1N5399</h3>
+    <p>S/ 0.50</p>
+    <button onclick="agregarAlCarrito('Diodo 1N5399', 0.50)">Agregar al carrito</button>
+</div>
+<div class="producto">
+    <img src="Diodo.jpg" alt="Diodo FR207">
+    <h3>Diodo FR207</h3>
+    <p>S/ 0.50</p>
+    <button onclick="agregarAlCarrito('Diodo FR207', 0.50)">Agregar al carrito</button>
+</div>
+<div class="producto">
+    <img src="Diodo.jpg" alt="Diodo 1N5819">
+    <h3>Diodo 1N5819</h3>
+    <p>S/ 0.50</p>
+    <button onclick="agregarAlCarrito('Diodo 1N5819', 0.50)">Agregar al carrito</button>
+</div>
+                
+<div class="producto">
+    <img src="Diodo.jpg" alt="Diodo 1N5822">
+    <h3>Diodo 1N5822</h3>
+    <p>S/ 0.50</p>
+    <button onclick="agregarAlCarrito('Diodo 1N5822', 0.50)">Agregar al carrito</button>
+</div>
+<div class="producto">
+    <img src="Diodo.jpg" alt="Diodo 1N5408">
+    <h3>Diodo 1N5408</h3>
+    <p>S/ 0.50</p>
+    <button onclick="agregarAlCarrito('Diodo 1N5408', 0.50)">Agregar al carrito</button>
+</div>
+
+
+
+                
 <div class="producto">
     <img src="Leds.jpg" alt="LEDS">
     <h3>LEDS rojo-verde-azul-blanco-amarillo 5mm</h3>
