--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
             <div class="productos" id="microcontroladores">
 
                 <div class="producto">
-    <img src="ARDUINO-UNO.jpg" alt="Microcontrolador Arduino Uno">
+    <img src="uno.jpg" alt="Microcontrolador Arduino Uno">
     <h3>Microcontrolador Arduino Uno</h3>
     <p>S/ 47.00</p>
     <button onclick="agregarAlCarrito('Microcontrolador Arduino Uno', 47.00)">Agregar al carrito</button>
@@ -1175,10 +1175,10 @@
     <button onclick="agregarAlCarrito('PIC32MX', 35.00)">Agregar al carrito</button>
 </div>
 <div class="producto">
-    <img src="https://via.placeholder.com/150" alt="Integrado 555 Timer">
+    <img src="Integrados.jpg" alt="Integrado 555 Timer">
     <h3>Integrado 555 Timer</h3>
-    <p>S/ 5.00</p>
-    <button onclick="agregarAlCarrito('Integrado 555 Timer', 5.00)">Agregar al carrito</button>
+    <p>S/ 3.00</p>
+    <button onclick="agregarAlCarrito('Integrado 555 Timer', 3.00)">Agregar al carrito</button>
 </div>
 <div class="producto">
     <img src="https://via.placeholder.com/150" alt="Integrado LM7805 (Regulador de voltaje)">
@@ -1193,29 +1193,59 @@
     <button onclick="agregarAlCarrito('Integrado LM317 (Regulador de voltaje ajustable)', 4.00)">Agregar al carrito</button>
 </div>
 <div class="producto">
-    <img src="https://via.placeholder.com/150" alt="Integrado LM358 (Amplificador operacional)">
+    <img src="Integrados.jpg" alt="Integrado LM358 (Amplificador operacional)">
     <h3>Integrado LM358 (Amplificador operacional)</h3>
-    <p>S/ 2.50</p>
-    <button onclick="agregarAlCarrito('Integrado LM358 (Amplificador operacional)', 2.50)">Agregar al carrito</button>
+    <p>S/ 3.00</p>
+    <button onclick="agregarAlCarrito('Integrado LM358 (Amplificador operacional)', 3.00)">Agregar al carrito</button>
 </div>
 <div class="producto">
-    <img src="https://via.placeholder.com/150" alt="Integrado ULN2003 (Driver para motores)">
+    <img src="Integrados.jpg" alt="Integrado LM324">
+    <h3>Integrado LM324</h3>
+    <p>S/ 5.00</p>
+    <button onclick="agregarAlCarrito('Integrado LM324', 5.00)">Agregar al carrito</button>
+</div>
+
+<div class="producto">
+    <img src="Integrados.jpg" alt="Integrado ULN2803APG">
+    <h3>Integrado ULN2803APG</h3>
+    <p>S/ 5.00</p>
+    <button onclick="agregarAlCarrito('Integrado ULN2803APG', 5.00)">Agregar al carrito</button>
+</div>
+
+<div class="producto">
+    <img src="Integrados.jpg" alt="Integrado LM386N">
+    <h3>Integrado LM386N</h3>
+    <p>S/ 3.00</p>
+    <button onclick="agregarAlCarrito('Integrado LM386N' 3.00)">Agregar al carrito</button>
+</div>
+
+<div class="producto">
+    <img src="Integrados.jpg" alt="Integrado UA741">
+    <h3>Integrado UA741</h3>
+    <p>S/ 3.00</p>
+    <button onclick="agregarAlCarrito('Integrado UA741' 3.00)">Agregar al carrito</button>
+</div>
+
+                
+
+<div class="producto">
+    <img src="Integrados.jpg" alt="Integrado ULN2003 (Driver para motores)">
     <h3>Integrado ULN2003 (Driver para motores)</h3>
     <p>S/ 6.00</p>
     <button onclick="agregarAlCarrito('Integrado ULN2003 (Driver para motores)', 6.00)">Agregar al carrito</button>
 </div>
+
+
+
+
+                
 <div class="producto">
     <img src="https://via.placeholder.com/150" alt="Integrado CD4017 (Contador decimal)">
     <h3>Integrado CD4017 (Contador decimal)</h3>
     <p>S/ 3.50</p>
     <button onclick="agregarAlCarrito('Integrado CD4017 (Contador decimal)', 3.50)">Agregar al carrito</button>
 </div>
-<div class="producto">
-    <img src="https://via.placeholder.com/150" alt="Integrado NE555 (Timer)">
-    <h3>Integrado NE555 (Timer)</h3>
-    <p>S/ 4.50</p>
-    <button onclick="agregarAlCarrito('Integrado NE555 (Timer)', 4.50)">Agregar al carrito</button>
-</div>
+
 <div class="producto">
     <img src="https://via.placeholder.com/150" alt="Integrado MAX232 (Conversor de nivel RS232)">
     <h3>Integrado MAX232 (Conversor de nivel RS232)</h3>
