--- a/index.html
+++ b/index.html
@@ -1316,7 +1316,7 @@
     <img src="RESISTENCIAS.jpg" alt="Resistencias">
     <h3>Resistencias</h3>
     <p>S/ 0.20</p>
-    <button onclick="agregarAlCarrito('Resistencias, 0.20)">Agregar al carrito</button>
+    <button onclick="agregarAlCarrito('Resistencias', 0.20)">Agregar al carrito</button>
 </div>
 
 
