--- a/index.html
+++ b/index.html
@@ -1256,6 +1256,96 @@
     <button onclick="agregarAlCarrito('Integrado NE5532 amplificador operacional', 3.00)">Agregar al carrito</button>
 </div>
 
+
+
+
+
+<div class="producto">
+    <img src="Integrados.jpg" alt="TC4427">
+    <h3>TC4427</h3>
+    <p>S/ 5.00</p>
+    <button onclick="agregarAlCarrito('TC4427', 5.00)">Agregar al carrito</button>
+</div>
+
+<div class="producto">
+    <img src="Integrados.jpg" alt="IR2104">
+    <h3>IR2104</h3>
+    <p>S/ 5.00</p>
+    <button onclick="agregarAlCarrito('IR2104', 5.00)">Agregar al carrito</button>
+</div>
+
+<div class="producto">
+    <img src="Transistor.jpg" alt="IRFZ44N">
+    <h3>IRFZ44N</h3>
+    <p>S/ 5.00</p>
+    <button onclick="agregarAlCarrito('IRFZ44N', 5.00)">Agregar al carrito</button>
+</div>
+
+<div class="producto">
+    <img src="Transistor.jpg" alt="IRL2703">
+    <h3>IRL2703</h3>
+    <p>S/ 5.00</p>
+    <button onclick="agregarAlCarrito('IRL2703', 5.00)">Agregar al carrito</button>
+</div>
+
+<div class="producto">
+    <img src="Transistor.jpg" alt="TIP142">
+    <h3>TIP142</h3>
+    <p>S/ 4.00</p>
+    <button onclick="agregarAlCarrito('TIP142', 4.00)">Agregar al carrito</button>
+</div>
+
+<div class="producto">
+    <img src="Transistor.jpg" alt="TIP127">
+    <h3>TIP127</h3>
+    <p>S/ 4.00</p>
+    <button onclick="agregarAlCarrito('TIP127', 4.00)">Agregar al carrito</button>
+</div>
+
+<div class="producto">
+    <img src="Transistor.jpg" alt="TIP32">
+    <h3>TIP32</h3>
+    <p>S/ 4.00</p>
+    <button onclick="agregarAlCarrito('TIP32', 4.00)">Agregar al carrito</button>
+</div>
+
+<div class="producto">
+    <img src="Transistor.jpg" alt="TIP42">
+    <h3>TIP42</h3>
+    <p>S/ 4.00</p>
+    <button onclick="agregarAlCarrito('TIP42', 4.00)">Agregar al carrito</button>
+</div>
+
+<div class="producto">
+    <img src="Transistor.jpg" alt="TIP122">
+    <h3>TIP122</h3>
+    <p>S/ 4.00</p>
+    <button onclick="agregarAlCarrito('TIP122', 4.00)">Agregar al carrito</button>
+</div>
+
+<div class="producto">
+    <img src="Transistor.jpg" alt="TIP31">
+    <h3>TIP31</h3>
+    <p>S/ 4.00</p>
+    <button onclick="agregarAlCarrito('TIP31', 4.00)">Agregar al carrito</button>
+</div>
+
+<div class="producto">
+    <img src="Transistor.jpg" alt="TIP41">
+    <h3>TIP41</h3>
+    <p>S/ 4.00</p>
+    <button onclick="agregarAlCarrito('TIP41', 4.00)">Agregar al carrito</button>
+</div>
+
+
+
+
+
+
+
+
+                
+
 <div class="producto">
     <img src="Transistor.jpg" alt="Transistor L7812">
     <h3>Transistor L7812</h3>
